更换写iframe方式

--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -148,9 +148,16 @@
 
                         <h2>卡组预览</h2>
 
-                        <iframe src="http://deck.ourygo.top?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA" 
+                        <iframe
+                            src="/api/deck-proxy?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA"
+                            width="100%"
+                            height="650"
+                            loading="lazy"
+                        ></iframe>
+
+                        <!-- <iframe src="http://deck.ourygo.top?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA" 
                             width="100%" height="800" style="width: 1000px; height: 800px !important;">
-                        </iframe>
+                        </iframe> -->
 
                     </div> <!-- end entry content -->
 
