更换卡组显示方式

--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/deck-viewer.css">
 
     <!-- script
     ================================================== -->
@@ -155,6 +156,90 @@
                             loading="lazy"
                         ></iframe> -->
 
+                        <div id="deck-raw" style="display:none;">
+                            #created by ygomobile
+                            #main
+                            3739500
+                            3739500
+                            3739500
+                            13332685
+                            13332685
+                            13332685
+                            19899073
+                            19899073
+                            19899073
+                            55397172
+                            40543231
+                            40543231
+                            40543231
+                            82782870
+                            18176525
+                            20295753
+                            27204311
+                            42141493
+                            42141493
+                            42141493
+                            14558128
+                            14558128
+                            23434538
+                            45171524
+                            45171524
+                            45171524
+                            81560239
+                            81560239
+                            81560239
+                            49721684
+                            49238328
+                            49238328
+                            84211599
+                            13048472
+                            24299458
+                            24299458
+                            24299458
+                            17954937
+                            40366667
+                            40366667
+                            #extra
+                            5088741
+                            32530043
+                            1269512
+                            61399402
+                            6983839
+                            66011101
+                            90448279
+                            73898890
+                            73898890
+                            65741786
+                            65741786
+                            29301450
+                            98462037
+                            8264361
+                            12067160
+                            !side
+                            91800273
+                            34267821
+                            34267821
+                            34267821
+                            84192580
+                            84192580
+                            94145022
+                            94145022
+                            94145022
+                            24224830
+                            65681983
+                            83326048
+                            83326048
+                            83326048
+                            23002292
+                        </div>
+
+                        <div id="deck-render"></div>
+
+                        <!-- hover 悬浮 -->
+                        <div id="card-hover">
+                            <iframe></iframe>
+                        </div>
+
                         <iframe src="http://deck.ourygo.top?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA" 
                             width="100%" height="800" style="width: 1000px; height: 800px !important;">
                         </iframe>
@@ -224,5 +309,6 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/deck-viewer.js"></script>
 
 </body>
