修改救祓少女的卡组码

--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Standard Post - Typerite</title>
+    <title>巳剑</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -26,9 +26,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="srds.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="srds.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="srds.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -149,13 +149,6 @@
 
                         <h2>卡组预览</h2>
 
-                        <!-- <iframe
-                            src="/api/deck-proxy?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA"
-                            width="100%"
-                            height="650"
-                            loading="lazy"
-                        ></iframe> -->
-
                         <div id="deck-raw" style="display:none;">
                             #created by ygomobile
                             #main
@@ -239,10 +232,6 @@
                         <div id="card-hover">
                             <iframe></iframe>
                         </div>
-
-                        <iframe src="http://deck.ourygo.top?name=%E5%B7%B3%E5%89%91&ygotype=deck&v=1&d=FdjByHtmMtwzcl9FgrTUs001Uf-zvKpZIqtBqTWwSUz41r6gwc1hvEdglllSrVihonNyCr1e1iqS71E4aCe8ejHGpjLlj4SRH4eZM_kloTaXlT4Lz2gTXwhdRwtSGqQn195_utZCGXozzcVPrI9pN-NZTd5pVUPw1UouCFYa8YWjoK4q2oJWonZyJ_kuNIfL6jo_57ujAle_LQA" 
-                            width="100%" height="800" style="width: 1000px; height: 800px !important;">
-                        </iframe>
 
                     </div> <!-- end entry content -->
 
