1. 修改首页 2. 修改js脚本以正确显示靠右侧卡片 3. 增加绚岚(卡组暂缺) 4. 增加杀手旋律

--- a/page-about.html
+++ b/page-about.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/deck-viewer.css">
 
     <!-- script
     ================================================== -->
@@ -48,57 +49,7 @@
 
         <!-- site header
         ================================================== -->
-        <header class="s-header">
-
-            <div class="header__top">
-                <div class="header__logo">
-                    <a class="site-logo" href="index.html">
-                        <img src="images/logo.svg" alt="Homepage">
-                    </a>
-                </div>
-            </div> <!-- end header__top -->
-
-            <nav class="header__nav-wrap">
-
-                <ul class="header__nav">
-                    <li class="current"><a href="index.html" title="">Home</a></li>
-                    <!-- <li class="has-children">
-                        <a href="#0" title="">Categories</a>
-                        <ul class="sub-menu">
-                        <li><a href="category.html">Lifestyle</a></li>
-                        <li><a href="category.html">Health</a></li>
-                        <li><a href="category.html">Family</a></li>
-                        <li><a href="category.html">Management</a></li>
-                        <li><a href="category.html">Travel</a></li>
-                        <li><a href="category.html">Work</a></li>
-                        </ul>
-                    </li> -->
-                    <li class="has-children">
-                        <a href="#0" title="">Deck List</a>
-                        <ul class="sub-menu">
-                        <li><a href="Mitsurugi.html">巳剑</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="page-about.html" title="">About</a></li>
-                    <li><a href="page-contact.html" title="">Contact</a></li>
-                </ul> <!-- end header__nav -->
-
-                <ul class="header__social">
-                    <!-- <li class="ss-twitter">
-                        <a href="https://x.com/MelloCyeru">
-                            <span class="screen-reader-text">Twitter</span>
-                        </a>
-                    </li> -->
-                </ul>
-
-            </nav> <!-- end header__nav-wrap -->
-
-            <!-- menu toggle -->
-            <a href="#0" class="header__menu-toggle">
-                <span>Menu</span>
-            </a>
-
-        </header> <!-- end s-header -->
+        <div id="header-placeholder"></div>
 
 
         <!-- site content
@@ -154,20 +105,7 @@
 
         <!-- footer
         ================================================== -->
-        <footer class="s-footer footer">
-            <div class="row">
-                <div class="column large-full footer__content">
-                    <div class="footer__copyright">
-                        <span>© Copyright PWB&SRDS 2026</span> 
-                        <span>Design by <a href="https://space.bilibili.com/18234381">SRDSMello</a> and <a href="https://space.bilibili.com/6267249">水橋パルスィ</a></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="go-top">
-                <a class="smoothscroll" title="Back to Top" href="#top"></a>
-            </div>
-        </footer>
+        <div id="footer-placeholder"></div>
 
     </div> <!-- end s-wrap -->
 
@@ -177,5 +115,6 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/deck-viewer.js"></script>
 
 </body>
