1. 增加绚岚卡组 2. 增加闪刀姬 3. 增加星辰烙印 4. 增加绚岚

--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -111,80 +111,65 @@
                         <h2>卡组预览</h2>
 
                         <div id="deck-raw" style="display:none;">
-                            #created by ygomobile
+                            #created by OURYGO
                             #main
-                            3739500
-                            3739500
-                            3739500
-                            13332685
-                            13332685
-                            13332685
-                            19899073
-                            19899073
-                            19899073
-                            55397172
-                            40543231
-                            40543231
-                            40543231
-                            82782870
-                            18176525
-                            20295753
-                            27204311
+                            85315450
+                            12197223
+                            12197223
+                            12197223
+                            53927851
+                            33854624
+                            16922142
+                            16922142
+                            16922142
                             42141493
                             42141493
                             42141493
-                            14558128
-                            14558128
+                            80538047
+                            80538047
+                            80538047
+                            54143349
+                            54143349
+                            54143349
+                            27755794
+                            14558127
+                            14558127
                             23434538
-                            45171524
-                            45171524
-                            45171524
-                            81560239
-                            81560239
-                            81560239
-                            49721684
-                            49238328
-                            49238328
-                            84211599
-                            13048472
-                            24299458
-                            24299458
-                            24299458
-                            17954937
-                            40366667
-                            40366667
-                            #extra
-                            5088741
-                            32530043
-                            1269512
-                            61399402
-                            6983839
-                            66011101
-                            90448279
-                            73898890
-                            73898890
-                            65741786
-                            65741786
-                            29301450
-                            98462037
-                            8264361
-                            12067160
-                            !side
-                            91800273
-                            34267821
-                            34267821
-                            34267821
-                            84192580
-                            84192580
-                            94145022
-                            94145022
-                            94145022
+                            5318639
+                            5318639
+                            5318639
+                            20508881
+                            20508881
+                            20508881
                             24224830
-                            65681983
-                            83326048
-                            83326048
-                            83326048
-                            23002292
+                            25940932
+                            30271097
+                            30271097
+                            30271097
+                            48130397
+                            48130397
+                            67115133
+                            67115133
+                            67115133
+                            57103969
+                            53813120
+                            #extra
+                            41209827
+                            87746184
+                            11765832
+                            54757758
+                            66532962
+                            78397661
+                            90448279
+                            72167543
+                            71068247
+                            71166481
+                            49105782
+                            30674956
+                            29301450
+                            39341885
+                            39341885
+                            !side
                         </div>
 
                         <div id="deck-render"></div>
