--- a/KV.html
+++ b/KV.html
@@ -136,80 +136,80 @@
                         <h2>卡组预览</h2>
 
                         <div id="deck-raw" style="display:none;">
-                        #created by ygomobile
+                        #created by ygopro2
                         #main
-                        44482554
-                        70871153
-                        70871153
-                        1498449
-                        1498449
-                        1498449
-                        75003700
-                        75003700
-                        75003700
-                        7375867
-                        84477320
-                        25451383
-                        73819701
-                        73819701
-                        68468459
-                        55273560
-                        95515789
-                        95515789
-                        33854624
+                        93156774
+                        93156774
+                        93156774
+                        9091064
+                        9091064
+                        9091064
+                        47960073
+                        47960073
+                        91800273
+                        29280200
+                        29280200
+                        29280200
+                        28642461
+                        55031170
+                        55031170
+                        92248362
+                        92248362
+                        92895501
+                        91073013
                         42141493
                         42141493
                         42141493
-                        73642296
-                        73642296
-                        73642296
-                        14558128
-                        14558128
+                        14558127
+                        14558127
+                        91025875
+                        64612053
+                        29302858
+                        38339996
+                        38339996
                         23434538
-                        94145022
-                        94145022
-                        94145022
-                        32548318
-                        32548318
-                        32548318
-                        6153210
-                        44362883
-                        30271097
-                        5431722
-                        69932023
-                        80208225
+                        84211599
+                        54562327
+                        54562327
+                        54562327
+                        32807846
+                        53792930
+                        24224831
+                        80181649
+                        35550352
+                        60883493
                         #extra
-                        79755671
-                        33760966
-                        33760966
-                        33760966
-                        38811586
-                        87746184
-                        76666602
-                        3410461
-                        41373230
-                        13735899
-                        89851827
-                        72578374
-                        78397661
-                        5041348
+                        90303227
+                        67515699
+                        40673853
+                        27420823
+                        27420823
                         29301450
+                        28168628
+                        28168628
+                        74997493
+                        61374414
+                        34876719
+                        64276752
+                        90448280
+                        2061963
+                        49456901
                         !side
-                        27204311
-                        27204311
-                        27204311
+                        46502744
+                        46502744
+                        46502744
                         84192580
                         84192580
                         84192580
-                        4227096
-                        4227096
-                        4227096
-                        18144506
-                        19613556
+                        83326048
+                        83326048
+                        83326048
+                        94145021
+                        94145021
+                        94145021
                         10045474
                         10045474
                         10045474
-                        23002292
                         </div>
 
                         <div id="deck-render"></div>
