新增利息德

--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -79,9 +79,7 @@
                     </div> <!-- end entry__header -->
 
                     <div class="entry__content">
-
                         <h2>裁定</h2>
-    
                         <p>
                             1. 连锁1发动"旋风", 连锁2发动禁忌的一滴Cost将手卡的"绚岚豪火 凤凰"送去墓地的场合. 那个连锁处理完毕后, "绚岚豪火 凤凰"不能发动③效果.
                         </p>
@@ -94,18 +92,22 @@
                         <p>
                             4. "绚岚之海灵 派比安"的②效果适用中, 可用的魔法/陷阱区域不足的场合, 先尽可能的把作为对象的怪兽当作永续魔法卡在魔法陷阱区域表侧表示放置. 剩余的怪兽送去墓地.
                         </p>
+                        <p>
+                            5. C1发动旋风, C2发动"禁忌的一滴"把手卡的"绚岚涡丽 派比安"送去墓地. 这个连锁处理完毕后, "绚岚涡丽 派比安"的③效果不能发动. 
+                        </p>
 
                         <h2>注意</h2>
                         <p>
                             1. "绚岚之风神"只有在自己墓地有「旋风」存在的场合或者对方场上没有魔法·陷阱卡存在的场合才能特殊召唤. 不告知对方是特殊召唤的场合, 发生争执可能会被认为是通常召唤. "绚岚之达维", "绚岚之米克拉"也一样.
                         </p>
-
                         <p>
                             2. "天雷之双风神 息那"一回合一次不会被战斗破坏. "绚岚之罗莎"对方场上不存在魔法陷阱卡才不会被战斗/效果破坏.
                         </p>
-
                         <p>
-                            3. "绚岚之罗莎"有自肃. "绚岚之米克拉"也一样.
+                            3. "绚岚之罗莎"有自肃. "绚岚之米克拉"也一样. 发动后注意不能发动超融合. 
+                        </p>
+                        <p>
+                            4. "绚岚"的下级怪兽只是能自己墓地存在"旋风"或是对方场上没有魔法/陷阱卡存在才能跳. 
                         </p>
 
                         <h2>卡组预览</h2>
