--- a/header.html
+++ b/header.html
@@ -35,6 +35,7 @@
                 <li><a href="DracotailBranded.html">星辰烙印</a></li>
                 <li><a href="Sky_Striker.html">闪刀</a></li>
                 <li><a href="KV.html">征服斗魂K9</a></li>
+                <li><a href="Apophis.html">王家/利息德</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
