增加自奏/同调均/纠罪巧

--- a/header.html
+++ b/header.html
@@ -36,6 +36,9 @@
                 <li><a href="Sky_Striker.html">闪刀</a></li>
                 <li><a href="KV.html">征服斗魂K9</a></li>
                 <li><a href="Apophis.html">王家/利息德</a></li>
+                <li><a href="Enneacraft.html">纠罪巧</a></li>
+                <li><a href="Orcust.html">自奏圣乐</a></li>
+                <li><a href="SynchronizeGS.html">耀圣星尘同调均</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
