删除加载样式, 这个样式可能导致加载缓慢

--- a/index.html
+++ b/index.html
@@ -34,16 +34,6 @@
 
 <body>
 
-    <!-- preloader
-    ================================================== -->
-    <div id="preloader">
-        <div id="loader" class="dots-fade">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
-
     <div id="top" class="s-wrap site-wrapper">
 
         <div id="header-placeholder"></div>
@@ -54,6 +44,7 @@
         <div class="s-content" style="text-align: center;">
             由SRDS制作与维护<br>
             粉丝群（神人都市）：457767939 | SRDS招新群：722481303
+            <div style="color: red;">如果在比赛过程中使用本页面, 可能会受到警告以上判罚</div>
         </div>
 
         <div class="s-content">
