--- a/page-about.html
+++ b/page-about.html
@@ -59,10 +59,21 @@
 
                     <div class="content__page-header">
                         <h1 class="display-1">
+                            关于我们
                         </h1>
                     </div> <!-- end content__page-header -->
 
                     <p class="lead drop-cap">
+                        
+                    </p>
+                    <p>
+                        本项目由梅洛以及包含蹦蹦在内的很多中国大陆裁判提供维护, 网站由水橋パルスィ提供. 
+                    </p>
+                    <p>
+                        如果您发现错误或是您需要提供您整理的资料来支持本项目, 可以通过QQ:1643879045联系. 
+                    </p>
+                    <p>
+                        正如首页说的, 这个页面不允许在比赛过程中查看. 
                     </p>
 
                     <hr>
