--- a/page-contact.html
+++ b/page-contact.html
@@ -65,7 +65,7 @@
 
                     <p class="lead drop-cap">
                     </p>
-
+                        本页面暂时没有任何内容.
                     <p>
                     </p>
 
