--- a/Maliss.html
+++ b/Maliss.html
@@ -78,7 +78,7 @@
                             2. "码丽丝梦游地下界"适用中, 对方的"闪刀姬-飒天"不能选择直接攻击. 不受魔法卡效果影响的怪兽可以攻击其他码丽丝怪兽. 
                         </p>
                         <p>
-                            3. 三战之号盖放的码丽丝陷阱卡不能适用"这张卡也能把自己场上1只表侧表示的「码丽丝」怪兽除外，在盖放的回合发动。"
+                            3. "三战之号"盖放的码丽丝陷阱卡不能适用"这张卡也能把自己场上1只表侧表示的「码丽丝」怪兽除外，在盖放的回合发动。"
                         </p>
                         <p>
                             4. "发动无效并除外"类效果, 被无效的卡不在原本的场所存在的场合, 不除外; 处理时适用"不能除外"类效果的场合, 无效适用, 不除外; "不能除外"类效果适用中, 不能发动这类效果. 
