修改杀旋一处错误

--- a/Kewl_Tune.html
+++ b/Kewl_Tune.html
@@ -79,7 +79,7 @@
                             2. "杀手旋律"的"场上的这张卡为素材作同调召唤的场合，手卡1只调整也能作为同调素材。"在自身被无效的场合也能适用.
                         </p>
                         <p>
-                            3. "杀手旋律"的自肃适用的回合, 也不能用"武力军奏"来同调同调调整以外的怪兽. 不能特召持有"这个效果特殊召唤的这张卡当作调整使用"效果的调整以外的怪兽. 是否可以特召持有"这张卡当作调整使用特殊召唤"效果的调整以外的怪兽, 调整中.
+                            3. "杀手旋律"的自肃适用的回合, 也不能用"武力军奏"来同调同调调整以外的怪兽. 不能特召持有"这个效果特殊召唤的这张卡当作调整使用"效果的调整以外的怪兽. 也不能特殊召唤"这张卡当作调整使用特殊召唤". 
                         </p>
                         <p>	
                             4. "杀手旋律·提示"的②效果处理时, 不能除外的效果适用的场合, 这个效果完全不适用, 也不翻开卡.
