修改码丽丝的几处错误

--- a/Maliss.html
+++ b/Maliss.html
@@ -90,10 +90,10 @@
                             6. 只有以墓地的怪兽发动"防火龙"的①效果, 才能连锁发动"屋敷童". 
                         </p>
                         <p>
-                            7. 发动过①效果的"防火龙"被表侧表示放置到魔法陷阱区域, 那之后又在怪兽区域特殊召唤的场合, 也能再次不在同一回合发动①效果. 
+                            7. 发动过①效果的"防火龙"被表侧表示放置到魔法陷阱区域, 那之后又因为效果被在怪兽区域特殊召唤的场合, 也能再次不在同一回合发动①效果, 可以在没有发动过①效果的回合再次发动①效果. 
                         </p>
                         <p>
-                            8. 盖放的攻击力1000以下的怪兽再反转后, 也能作为素材连接召唤"转生炎兽 独角兔". 
+                            8. 通常盖放的攻击力1000以下的怪兽再反转后, 也能作为素材连接召唤"转生炎兽 独角兔". 
                         </p>
                         <p>
                             9. "码丽丝<王后>红心加密"的①效果, 只要处理时连接端存在怪兽就会适用"这个发动和这个效果不会被无效化".
@@ -112,7 +112,7 @@
                             4. 注意码丽丝下级处于码丽丝连接怪兽的连接端时各自的效果. 
                         </p>
                         <p>
-                            5. "G石人·水晶心"互相连接的地属性连接怪兽可以攻击两次, 会穿防. 
+                            5. "G石人·水晶心"互相连接的地属性连接怪兽可以攻击两次, 会穿防, 与自身互相连接的地属性连接怪兽会根据它的G石人指示物的数量提升攻击力. 
                         </p>
 
                         <h2>卡组预览</h2>
