修改救祓少女以及绚岚的错误

--- a/Exosister.html
+++ b/Exosister.html
@@ -104,7 +104,7 @@
                         <h2>注意</h2>
 
                         <p>
-                            1. "救祓少女·马尔法"的②效果等效果不能在伤害步骤发动. 那个①效果只有自己场上的怪兽不存在的场合或者只有超量怪兽的场合才能发动. 只能特殊召唤"救祓少女·埃莉丝".
+                            1. "救祓少女·马尔法"的②效果效果不能在伤害步骤发动. "救祓少女·埃莉丝", "救祓少女·斯特拉", "救祓少女·伊雷娜", "救祓少女·索菲娅"也一样. 那个①效果只有自己场上的怪兽不存在的场合或者只有超量怪兽的场合才能发动. 只能特殊召唤"救祓少女·埃莉丝".
                         </p>
 
                         <p>
