--- a/DracotailBranded.html
+++ b/DracotailBranded.html
@@ -99,21 +99,21 @@
                             <br>
                             ●装备了怪兽卡的怪兽被解放, 送去墓地的场合.
                             <br>
-                            ●作为"万能地雷未爆弹"对象的两只怪兽, 其中一只离开场上的场合. "万能地雷未爆弹"立刻适用自身的效果, 破坏自身, 并破坏作为对象的另一只怪兽. 两只怪兽均送去墓地的场合.
+                            <!-- ●作为"万能地雷未爆弹"对象的两只怪兽, 其中一只离开场上的场合. "万能地雷未爆弹"立刻适用自身的效果, 破坏自身, 并破坏作为对象的另一只怪兽. 两只怪兽均送去墓地的场合. -->
                             <br>
                             ●自己场上的装备了对方的怪兽的怪兽被破坏, 那只自己的怪兽送去自己墓地, 那只对方的怪兽送去对方的墓地的场合.
                             <br>
                             ●自己的获得了对方的怪兽作为超量素材的"时间潜行者·表盘修复师"被破坏, 那只自己的怪兽送去自己墓地, 那个超量素材送去对方墓地的场合.
                             <br>
-                            ●用①效果特殊召唤了对方墓地不死族怪兽的"死亡帝王龙"被破坏, 那只自己的怪兽送去自己墓地, 那只对方的怪兽送去对方的墓地的场合.
+                            <!-- ●用①效果特殊召唤了对方墓地不死族怪兽的"死亡帝王龙"被破坏, 那只自己的怪兽送去自己墓地, 那只对方的怪兽送去对方的墓地的场合. -->
                             <br>
-                            ●"万能地雷未爆弹"选择了自己与对方场上各一只怪兽, 被"万能地雷未爆弹"选择为对象的其中一只怪兽被破坏, 立即适用"万能地雷未爆弹"的效果, 使得另一只怪兽被破坏, 那只自己的怪兽送去自己墓地, 那只对方的怪兽送去对方的墓地的场合.
+                            <!-- ●"万能地雷未爆弹"选择了自己与对方场上各一只怪兽, 被"万能地雷未爆弹"选择为对象的其中一只怪兽被破坏, 立即适用"万能地雷未爆弹"的效果, 使得另一只怪兽被破坏, 那只自己的怪兽送去自己墓地, 那只对方的怪兽送去对方的墓地的场合. -->
                         </p>
-                        <p>
+                        <!-- <p>
                             5. 以下情况不知道是否可以发动"星辰爪龙 巨蟹摩羯龙魔"的②效果. 
                             <br>
                             ●对方场上存在"守墓的使魔", 自己的"漆黑之豹战士"攻击宣言之际. 因同时适用"守墓的使魔"与"漆黑之豹战士"的效果从卡组最上方与场上各有一只怪兽被送去墓地.
-                        </p>
+                        </p> -->
                         <p>
                             6. "奥秘之龙冠"的②效果的对象不在表侧表示存在的场合, 不进行任何处理.
                         </p>
