修改闪刀姬

--- a/Sky_Striker.html
+++ b/Sky_Striker.html
@@ -96,7 +96,7 @@
                             1. "闪刀起动-连刀"与"未来之柱-奇亚诺丝"有自肃. 
                         </p>
                         <p>
-                            2. 不能用"未来之柱-奇亚诺丝"连接召唤Link1的"闪刀姬"怪兽. 
+                            2. 不能用"未来之柱-奇亚诺丝"连接召唤Link1的"闪刀姬"怪兽. 也不能用只包含"未来之柱-奇亚诺丝"而不包含"闪刀姬"怪兽在内的2只怪兽作为素材连接召唤"闪刀姬-泽克", "闪刀姬=零露".
                         </p>
 
                         <h2>卡组预览</h2>
