--- a/Apophis.html
+++ b/Apophis.html
@@ -72,7 +72,7 @@
                     <div class="entry__content">
                         <h2>裁定</h2>
                         <p>
-                            1. 发动了①效果的"守护兽 塞勒凯特"不能再一次攻击宣言. 
+                            1. 发动了②效果的"守护兽 塞勒凯特"不能再一次攻击宣言. 
                         </p>
                         <p>
                             2. 连锁"阿匹卜之蛇神"的对方发动"灵王的波动", 处理时对方墓地不存在陷阱卡的场合, "阿匹卜之蛇神"表侧表示留在魔法/陷阱区域.
