--- a/header.html
+++ b/header.html
@@ -40,6 +40,7 @@
                     <li><a href="Orcust.html">自奏圣乐</a></li>
                     <li><a href="SynchronizeGS.html">耀圣星尘同调均</a></li>
                     <li><a href="Maliss.html">码丽丝</a></li>
+                    <li><a href="DDD.html">DDD</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
