--- a/page-about.html
+++ b/page-about.html
@@ -70,7 +70,7 @@
                         本项目由梅洛以及包含蹦蹦在内的很多中国大陆裁判提供维护, 网站由水橋パルスィ提供. 
                     </p>
                     <p>
-                        如果您发现错误或是您需要提供您整理的资料来支持本项目, 可以通过QQ:1643879045联系. 
+                        如果您发现错误或是有您想加入的卡组又或是您需要提供您整理的资料来支持本项目, 可以访问https://docs.qq.com/sheet/DSFBKTEtGRWNaV0Fr. 
                     </p>
                     <p>
                         正如首页说的, 这个页面不允许在比赛过程中查看. 
