增加绚岚的注意事项

--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -61,7 +61,7 @@
                         </h1>
                         <ul class="entry__header-meta">
                             <li class="author">By <a href="#0">Mello</a></li>
-                            <li class="date">2026-01-09</li>
+                            <li class="date">2026-01-12</li>
                             <!-- <li class="cat-links">
                                 <a href="#0">Marketing</a><a href="#0">Management</a>
                             </li> -->
@@ -95,6 +95,18 @@
                         </p>
                         <p>
                             3. "绚岚之罗莎"有自肃. "绚岚之米克拉"也一样. 发动后注意不能发动超融合. 
+                        </p>
+                        <p>
+                            4. "绚岚之米克拉"的②效果在发动"绚岚"速攻魔法卡或"旋风"的场合才能发动. 不能在发动"落胤与圣女", "超融合"等卡的场合发动.  
+                        </p>
+                        <p>
+                            5. "天雷之双风神 息那"连锁魔法/陷阱卡的发动只能将场上的魔法/陷阱卡吹回手卡. 不能连锁"无限泡影"的发动选择场上的怪兽回到手卡来躲避"无限泡影".  
+                        </p>
+                        <p>
+                            6. "天雷之双风神 息那"连锁怪兽发动, 处理时所有卡名是"天雷之双风神 息那"的怪兽都不会回到手卡. 
+                        </p>
+                        <p>
+                            7. "绚岚之达维"是兽族, "炎舞-「天玑」"无法为其增加攻击力. 
                         </p>
 
                         <h2>卡组预览</h2>
