增加绚岚的注意事项

--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -108,6 +108,9 @@
                         <p>
                             7. "绚岚之达维"是兽族, "炎舞-「天玑」"无法为其增加攻击力. 
                         </p>
+                        <p>
+                            8. "绚岚的权能"①效果取对象的卡必须包含一张"绚岚"卡, ②效果不能以自己场上的表侧表示卡为对象. 
+                        </p>
 
                         <h2>卡组预览</h2>
 
