--- a/DracotailBranded.html
+++ b/DracotailBranded.html
@@ -62,7 +62,7 @@
                         </h1>
                         <ul class="entry__header-meta">
                             <li class="author">By <a href="#0">Mello</a>&<a href="#0">蹦蹦</a></li>
-                            <li class="date">2026-01-09</li>
+                            <li class="date">2026-01-12</li>
                             <!-- <li class="cat-links">
                                 <a href="#0">Marketing</a><a href="#0">Management</a>
                             </li> -->
@@ -133,6 +133,12 @@
                         </p>
                         <p>
                             5. "赫之圣女 卡尔特西娅"只能融8星以上的融合怪兽.
+                        </p>
+                        <p>
+                            6. "星辰的裂角"处理时回墓地/除外状态的"星辰"卡抽1时, 不能选择回"星辰的裂角"这个卡名的卡. "星辰的裂角", "星辰的刺毒"也一样. 
+                        </p>
+                        <p>
+                            7. "深渊龙 白界转生龙"不能作为融合素材. 
                         </p>
 
                         <h2>卡组预览</h2>
