--- a/DDD.html
+++ b/DDD.html
@@ -71,14 +71,146 @@
 
                     <div class="entry__content">
                         <h2>裁定</h2>
+                        <p>
+                            1. "DDD 零死王 零·机降神"的①的怪兽效果只能把自身特殊召唤到额外怪兽区域或是连接怪兽的连接端所指向的自己的主要怪兽区域. ②的怪兽效果处理时没有可用的灵摆区域的场合, 这张卡送去墓地. 除外状态中这个效果发动的场合, 同样回到墓地.
+                        </p>
+                        <p>
+                            2. 已经适用了"这个回合，自己在通常的灵摆召唤外加上只有1次，自己主要阶段可以把「DD」怪兽灵摆召唤。"效果的回合, 无论是否已经追加灵摆召唤, 都不能再把"DDD 天空王 宙斯末日神"的①效果发动. 适用追加灵摆召唤时, 需要宣言是因为这个效果进行的灵摆召唤, 因没有宣言而有争执时, 可能会被认为是通常的灵摆召唤. 这个①效果取对象的卡即使没有破坏, 也会适用效果.
+                        </p>
+                        <p>
+                            3. "DDD 赦俿王 死亡机降神"的②效果处理时, 自身不在场上存在的场合, 把自己场上表侧表示一张"契约书"卡破坏. 发动效果的怪兽卡不在场上存在的场合, 取除自身的两个超量素材或自己场上表侧表示一张"契约书"卡破坏选一个处理. 这个效果不能连锁作为代价把自身解放, 或是把自身除外等效果的发动来发动. 也不能连锁怪兽区域的陷阱怪兽的效果的发动来发动.
+                        </p>
+                        <p>
+                            4. "DDD 咒血王 赛弗里德"的②效果是必定发动的效果. 那个①效果在对方回合无效了自己场上的"地狱门的契约书"的场合, 下个我方的准备阶段, 由我方选择"地狱门的契约书"的②效果的发动和那个①效果结束适用的顺序.
+                        </p>
+                        <p>
+                            5. "特许权的契约书类", "DD 魔导贤者 托马斯"的将额外卡组表侧表示"DD"怪兽加入手卡的效果, 均不能选融合灵摆/同调灵摆/超量灵摆怪兽.
+                        </p>
+                        <p>
+                            6. "DDD 圣贤王 阿尔弗雷德"的②效果处理时, 可用的魔法/陷阱区域不足的场合, 先尽可能的把那些作为对象的卡在魔法/陷阱区域表侧表示放置, 剩余的卡送去/回到墓地.
+                        </p>
                         <h2>注意</h2>
+                        <p>
+                            1. "DDD 坏薙王 深渊末日神"的①的灵摆效果处理时会适用"这个回合，对方受到的战斗伤害变成一半。"
+                        </p>
+                        <p>
+                            2. "DD 俄耳托斯"的①的怪兽效果会错过时点.
+                        </p>
+                        <p>
+                            3. "常暗的契约书"的①效果不是对怪兽适用的效果.
+                        </p>
+                        <p>
+                            4. 灵摆区域的"DD 魔导贤者 开普勒"被无效后, 灵摆刻度变为原本的数值.
+                        </p>
+                        <p>
+                            5. "DDD 智慧王 所罗门"的②的●效果, 是必发效果, 获得这个效果的怪兽在伤害步骤结束时在场上存在会发动, 不在场上存在则不会发动.
+                        </p>
+                        <p>
+                            6. "DDD 怒涛大王 决策凯撒"的①效果可以在同一连锁上复数次发动.
+                        </p>
+                        <p>
+                            7. 战斗或是原本持有者控制的这张卡被对方卡的效果破坏的场合才能发动"DDD 烈火王 铁木真"的②效果.
+                        </p>
+                        <p>
+                            8. 自己场上存在"DD"灵摆怪兽卡才能通过自身效果特殊召唤"DD 刻度测量员". 
+                        </p>
+                        <p>
+                            9. 自己场上存在"DD"怪兽才能通过自身效果特殊召唤"DD 狮鹫", 只能守备表示特殊召唤.
+                        </p>
+                        <p>
+                            10. "DD 俄耳托斯"的灵摆效果可以以自身为对象发动, 这时另一张对象必须是自己场上的一张"DD"卡或是"契约书"卡.
+                        </p>
+                        <p>
+                            11. "DDD 死讴王 恶德镇魂神"的②效果不用发动, 只能赋予这个回合首次用他作为素材融合/同调/超量/连接召唤的"DDD"怪兽.
+                        </p>
+                        <h2>自肃</h2>
+                        <p>
+                            1. "零王的契约书", "DDD 深渊王 比尔伽美斯"的①效果有"DD"怪兽特殊召唤自肃. 
+                        </p>
+                        <p>
+                            2. "DD 俄耳托斯"特召后会适用恶魔族怪兽特殊召唤自肃. 
+                        </p>
+                        <p>
+                            3. "灵王的波动"会影响到: "天霆号 阿宙斯".
+                        </p>
 
                         <h2>卡组预览</h2>
 
                         <div id="deck-raw" style="display:none;">
-                        #created by OURYGO
+                        #created by ygomobile
                         #main
+                        20715411
+                        20715411
+                        20715411
+                        74069667
+                        5997110
+                        5997110
+                        41546
+                        28406301
+                        28406301
+                        28406301
+                        72181263
+                        42141493
+                        42141493
+                        42141493
+                        46796664
+                        14558127
+                        14558127
+                        67322708
+                        42382265
+                        42382265
+                        42382265
+                        72291412
+                        94145021
+                        94145021
+                        94145021
+                        11609969
+                        11609969
+                        11609969
+                        24224830
+                        65681983
+                        32665564
+                        46372010
+                        46372010
+                        46372010
+                        73360025
+                        10045474
+                        10045474
+                        40366667
+                        40366667
+                        91781484
                         #extra
+                        71398055
+                        74583607
+                        11852093
+                        44852429
+                        70576413
+                        90448279
+                        46593546
+                        46593546
+                        79559912
+                        71612253
+                        3758046
+                        32232538
+                        30998403
+                        9024198
+                        9024198
+                        !side
+                        27204314
+                        27204314
+                        84192580
+                        84192580
+                        84192580
+                        14532164
+                        14532164
+                        35269905
+                        35269905
+                        58570206
+                        58570206
+                        43262273
+                        54974237
+                        83326048
+                        23002292
                         </div>
 
                         <div id="deck-render"></div>
